sent-marketing/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sent-marketing
spec:
  selector:
    app: sent-marketing
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
